--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
+    "@storybook/addon-storyshots": "^6.1.21",
     "@storybook/angular": "^6.1.11",
     "@testing-library/angular": "^10.3.0",
     "@types/jest": "^26.0.20",
@@ -99,10 +100,12 @@
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/src/jest-config/__mocks__/styleMock.js",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/jest-config/__mocks__fileMock.js"
+      
     },
     "transform": {
       "^.+\\.(ts|html)$": "ts-jest",
-      "^.+\\.js$": "babel-jest"
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.stories\\.[jt]sx?$": "@storybook/addon-storyshots/injectFileName"
     },
     "moduleFileExtensions": [
       "ts",
